style fix to long form
so ladies' ear is not cut off

--- a/style.css
+++ b/style.css
@@ -3032,6 +3032,7 @@ Header
 	text-transform: uppercase;
 	line-height: 65px;
 	max-width: 478px;
+	background-color:transparent;
 }
 .b-header_content header span {
 	font-weight: bold;
